# course_work_4_Parser

./: README.md  main.py  pyproject.toml  Токен для работы с API SJ.txt
project_classes/: connector.py  engine.py  vacancy.py
project_data/: all.json
project_utils/: utils.py
test_data/: vacancies_list_hh.json  vacancies_list_sj.json
tests/: conftest.py  test_connector.py  test_engine.py  test_utils.py  test_vacancy.py
